# vehicle_tracking

./: .gitmodules  maual_px4_msgs_sync  maual_px4_msgs_sync.txt  notes.txt  px4_sitl_setup.bash
src/vehicle_tracking/: CMakeLists.txt  package.xml
src/vehicle_tracking/include/vehicle_tracking/: mode.hpp  path_math.hpp
src/vehicle_tracking/src/: main.cpp  path_generation_node.cpp  path_math.cpp  simulated_vehicle_node.cpp
